@@ -46,13 +46,19 @@ AM_INIT_AUTOMAKE(cppunit, $CPPUNIT_VERSION)
 
 dnl Checks for programs.
 
+# The libtool macro AM_PROG_LIBTOOL checks for the C preprocessor.
+# Configure gets confused if we try to check for a C preprocessor
+# without first checking for the C compiler
+# (see http://sources.redhat.com/ml/autoconf/2001-07/msg00036.html),
+# so we invoke AC_PROG_CC explicitly.
+AC_PROG_CC
+AC_PROG_CXX
+AC_LANG(C++)
+
 AM_DISABLE_STATIC
 AM_PROG_LIBTOOL
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
-
-AC_PROG_CXX
-AC_LANG_CPLUSPLUS
 
 AC_ARG_ENABLE(debug-mode,   
 [  --enable-debug-mode     enable debugging mode],
