@@ -3,7 +3,7 @@ EXTRA_DIST = CppUnitTestMain.dsw CppUnitTestMain.dsp
 TESTS = cppunittestmain
 check_PROGRAMS = $(TESTS)
 
-INCLUDES = -I$(top_srcdir)/include
+INCLUDES = -I$(top_builddir)/include -I$(top_srcdir)/include
 
 cppunittestmain_SOURCES = \
 	BaseTestCase.cpp \
